fixed alignment of bullet points

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,6 +1,6 @@
 .container {
     margin: 0 auto;
-    /*text-align: center;*/
+    text-align: center;
 }
 
 .destinations{
